# A-simple-virus-spread-simulation

./: .gitignore  GEMM_test.py  Makefile  README.md  Simu_test.py  config.py  main.py  pyproject.toml  simulator_pybind.cpp
.github/workflows/: test.yml
include/: MySimulator.hpp  Parameter.hpp  SimulationState.hpp
lib/: MySimulator.cpp  simulator_pybind.cpp
my_simulation/: __init__.py  population.py  simulator.py  visualize.py
test/: Simu_test.py  simulation_test.py
